# talktome

./: README.md  venv_setup
talktome/: .coveragerc  README.rst  locals.cfg.template  makeLocalsTemplate.sh  setup.cfg  setup.py
talktome/docs/: Makefile  conf.py  index.rst
talktome/talktome/: audio.py  segment.py  skeleton.py  youtalk.py
talktome/tests/: conftest.py  test_skeleton.py
